# reverse-rusty

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  benchmark-mokaccino.txt  setup-hooks.sh
engine/: Cargo.toml  check.sh  deny.toml  rust-toolchain.toml  rustfmt.toml
engine/grpc/: Cargo.toml  build.rs
engine/grpc/proto/: health.proto  shard.proto
engine/grpc/src/: lib.rs
engine/ref-matcher/: Cargo.toml
engine/ref-matcher/src/: clean.rs  extract.rs  features.rs  lib.rs  matcher.rs  normalize.rs  parse.rs  phrases.rs  vocab.rs
engine/src/: broker.rs  cluster.rs  collect.rs  compile.rs  config.rs  corpus.rs  delivery.rs  dict.rs  dsl.rs  error.rs  events.rs  exact.rs  explain.rs  filter.rs  gen.rs  index.rs  lib.rs  loader.rs  normalize.rs  ownership.rs  pit.rs  rank.rs  result.rs  segment.rs  storage.rs  tagdict.rs  util.rs  vocab.rs  wal.rs
engine/src/cluster/: allocator.rs  autoscale.rs  clog.rs  control.rs  control_raft.rs  control_server.rs  control_store.rs  control_wire.rs  coordinator.rs  handoff.rs  health.rs  http_status.rs  node_metrics.rs  proto.rs  ranked_wire.rs  remote.rs  remote_control.rs  replica.rs  ring.rs  security.rs  server.rs  shard.rs  translog.rs  transport_metrics.rs
engine/src/cluster/clog/: tests.rs
engine/src/cluster/control_raft/: builders.rs  log_store.rs  network.rs  state_machine.rs
engine/src/cluster/coordinator/: autoscale.rs  control_plane.rs  distributed.rs  exhaustive.rs  gc.rs  ingest.rs  lifecycle.rs  logical_ids.rs  matching.rs  pit.rs  ranked.rs  ranked_batch.rs  reassign.rs  reconcile.rs  resize.rs  tests.rs  topology.rs  vocab.rs
engine/src/cluster/coordinator/lifecycle/: backup.rs  build.rs  checkpoint.rs  open.rs
engine/src/cluster/coordinator/reassign/: group.rs  ledger.rs  parallel.rs
engine/src/cluster/node_metrics/: broad_cost.rs  latency.rs  rank_delivery.rs  tests.rs
engine/src/cluster/replica/: shard_impl.rs  test_support.rs  tests.rs
engine/src/cluster/replica/tests/: failover.rs  recovery.rs  retention.rs
engine/src/cluster/server/: durable.rs  metrics_source.rs  service.rs  tests.rs
engine/src/cluster/server/service/: add_shard.rs  dict_adopt.rs  exhaustive.rs  gc.rs  leases.rs  ranked.rs  ranked_batch.rs  (+1 more)
engine/src/cluster/shard/: fetch.rs  local.rs  retention.rs  tests.rs
engine/src/collect/: chunk.rs  top_k.rs
engine/src/compile/: extract.rs  plan.rs  tests.rs
engine/src/exact/: slices.rs  store.rs  tests.rs
engine/src/normalize/: builder.rs  core.rs  parse_union_oracle.rs  tests.rs
engine/src/normalize/core/: alias_overlap.rs  helpers.rs
engine/src/segment/: base.rs  broad_batch.rs  compaction.rs  ingest.rs  lifecycle.rs  matching.rs  merge.rs  metrics.rs  persistence.rs  ranked_batch.rs  seg.rs  snapshot.rs  wal_failure_tests.rs
engine/src/segment/broad_batch/: driver.rs  kernel.rs  ranked.rs
engine/src/segment/lifecycle/: accessors.rs  backup.rs  construct.rs  recovery.rs  vocab.rs
engine/src/storage/: backup.rs  dict.rs  manifest.rs  segment.rs  sources.rs  tagdict.rs
engine/src/storage/segment/: mmap.rs  read.rs  write.rs
engine/src/vocab/: alias.rs  distributional.rs  learn.rs  methods.rs  synonyms.rs  tests.rs
engine/src/vocab/alias/: classify.rs  feedback.rs  solr.rs  tests.rs
engine/src/vocab/distributional/: tests.rs
engine/tests/: broad_batch.rs  cluster_allocator_oracle.rs  cluster_autoscale_oracle.rs  cluster_control_plane_oracle.rs  cluster_control_raft_oracle.rs  cluster_control_wiring_oracle.rs  cluster_durability_oracle.rs  cluster_grpc_oracle.rs  cluster_oracle.rs  cluster_reconcile_oracle.rs  coverage_gaps.rs  delivery_stats.rs  error_paths.rs  exhaustive_delivery.rs  hardening_fixes.rs  node_metrics.rs  oracle.rs  persistence.rs  ranked_batch.rs  ranking.rs  stress.rs
engine/tests/adversarial/: forms.rs  fuzz.rs  harness.rs  main.rs  perturbation.rs  self_match.rs
engine/tests/cluster_durability_oracle/: attach.rs  backends.rs  backup.rs  checkpoint.rs  class_d.rs  core.rs  harness.rs  hot.rs  main.rs  ranked.rs  replication.rs  resize.rs  torn_tail.rs  upsert.rs  vocab.rs  vocab_stale_sources.rs
engine/tests/cluster_grpc_oracle/: block_on.rs  broad_cost.rs  class_d.rs  colocation.rs  core.rs  dict_shipping.rs  exhaustive.rs  filtered.rs  fingerprint.rs  gc.rs  handoff.rs  harness.rs  health.rs  hot.rs  legacy_layout.rs  main.rs  parallel.rs  partial_apply.rs  pit.rs  ranked_batch.rs  reassign.rs  rebalance.rs  reconcile.rs  reconcile_replicated.rs  recovery.rs  relocation.rs  replication.rs  replication_colocation.rs  routing.rs  security.rs  top_k.rs  transport.rs
engine/tests/cluster_grpc_oracle/reconcile_replicated/: fixture.rs
engine/tests/cluster_oracle/: class_d.rs  differential.rs  dynamic_vocab.rs  filtered.rs  harness.rs  hot.rs  main.rs  pit.rs  placement.rs  ranked_batch.rs  ranking.rs  replication.rs  resize.rs  vocab_learning.rs  vocab_reopen.rs
engine/tests/cluster_soak/: harness.rs  main.rs  soak.rs
engine/tests/coverage_gaps/: broad_lane.rs  compaction.rs  edge_cases.rs  harness.rs  main.rs  parallel.rs  settings.rs
engine/tests/crash_injection/: backup.rs  churn.rs  compaction.rs  flush.rs  harness.rs  main.rs  upsert.rs  wal_append.rs  watermark.rs
engine/tests/hardening_fixes/: combined_lifecycle.rs  corrupt_data.rs  delete_reverse_index.rs  explain_hit.rs  harness.rs  main.rs  vocab_epoch.rs
engine/tests/independent_oracle/: aliases.rs  core.rs  corpus.rs  gotcha.rs  harness.rs  main.rs
engine/tests/oracle/: alias.rs  alias_discovery.rs  alias_edges.rs  alias_feedback.rs  batch.rs  class_d.rs  core.rs  corpus.rs  dedup.rs  degenerate.rs  equivalence.rs  filtered.rs  harness.rs  hot.rs  main.rs  messy.rs  reanchor.rs  segments.rs  synonyms.rs  vocab.rs
engine/tests/persistence/: backup.rs  compaction.rs  durability.rs  harness.rs  main.rs  round_trip.rs  sources.rs  tombstone_durability.rs  upsert.rs  wal.rs
engine/tests/stress/: cancellation.rs  doc_store.rs  harness.rs  interleaved.rs  main.rs  oracle_lifecycle.rs  parallel.rs  single_thread.rs  soak.rs  tombstone_compaction.rs
(+197 files in other folders)
