[package]
name = "reverse-rusty"
version = "0.1.0"
edition = "2021"
description = "Domain-aware reverse product-query matcher. daachorse for multiword aliases, roaring for large postings, rayon for parallel matching."
# Licensed under the MIT License — a permissive, widely-recognized license
# (reuse permitted with attribution) that is compatible with the all-permissive
# (MIT / Apache-2.0 / BSD) dependency tree. Full text in ../LICENSE.
license = "MIT"
# Still not published to crates.io; `cargo deny`'s `licenses.private.ignore` skips
# this local crate regardless, and "MIT" is allow-listed in deny.toml anyway.
publish = false

# `engine` is the workspace root package; `grpc` is the generated gRPC proto crate
# (reverse-rusty-shard-proto), pulled in only under the `distributed` feature. The
# root package + every documented command stay unchanged — the member is built only
# when something activates the optional dependency on it.
[workspace]
members = ["grpc"]

[dependencies]
# ---- Core library (always compiled; this is the lean `--no-default-features` build) ----
daachorse = "3"
memmap2 = "0.9"
rayon = "1"
roaring = "0.11"
arc-swap = "1"
# serde/serde_json are core, not server: Vocab JSON persistence (vocab.rs),
# EngineConfig Serialize (config.rs), ExplainDetail (explain.rs), and the JSONL
# query loader (loader.rs) all live in the library. They must NOT be gated.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ---- HTTP server + observability (behind the default-on `server` feature) ----
# Used only by src/bin/server.rs; `optional = true` keeps them out of the lean
# core. The `server` feature (default-on) re-enables them, and the server bin
# carries `required-features = ["server"]` so it is skipped when they are off.
# A stray `use` of any of these in the library proper fails the "clippy (lean
# core)" lane in check.sh.
axum = { version = "0.8", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
parking_lot = { version = "0.12", optional = true }
tower = { version = "0.5", features = ["limit"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
# default-features disabled to drop the optional `protobuf` feature: we only emit
# the text exposition format (TextEncoder), which lives in prometheus core and
# needs no protobuf. (Under 0.13 this also dodged RUSTSEC-2024-0437's vulnerable
# protobuf 2.x; 0.14 ships protobuf 3.7.2, so disabling it is now a lean-deps
# choice, not a security workaround.)
prometheus = { version = "0.14", default-features = false, optional = true }

# ---- Distributed: gRPC ShardServer / RemoteShard (behind the `distributed` feature; ADR-029) ----
# The generated proto crate is the workspace member `grpc/`; `tonic` is the runtime.
# Off by default — pulls in the tonic/hyper/tokio-net stack only when enabled, so the
# lean core and the standard server build never compile it.
reverse-rusty-shard-proto = { path = "grpc", optional = true }
tonic = { version = "0.14", optional = true }

[features]
# Default-on so every documented command (`cargo build --release`,
# `cargo run --release --bin server`, `cargo test --release`) behaves exactly as
# before. The lean core is opt-in via `--no-default-features` and is enforced by
# the "clippy (lean core)" lane in check.sh. See docs/DECISIONS.md ADR-028.
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:clap",
    "dep:parking_lot",
    "dep:tower",
    "dep:uuid",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:prometheus",
]
# gRPC shard transport (ADR-029): the generated proto crate + tonic + tokio's `net`
# stack. Off by default, so neither the lean core nor the standard server build sees
# it. `dep:tokio` re-enables tokio (optional since the lean split) with its declared
# features; `tokio/net` adds the socket support tonic's transport needs.
distributed = ["dep:reverse-rusty-shard-proto", "dep:tonic", "dep:tokio", "tokio/net"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "clusterdemo"
path = "src/bin/clusterdemo.rs"

[[bin]]
name = "learn"
path = "src/bin/learn.rs"

[[bin]]
name = "segbench"
path = "src/bin/segbench.rs"

[[bin]]
name = "snapbench"
path = "src/bin/snapbench.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
# The HTTP server is the only consumer of the gated server/observability crates,
# so it only builds when the `server` feature is on. Under `--no-default-features`
# Cargo skips this bin (its `use axum::…` etc. never compile).
required-features = ["server"]

[[bin]]
name = "shardserver"
path = "src/bin/shardserver.rs"
# A deployable shard node: serves ShardService over gRPC. Builds only with the
# `distributed` feature (and its tonic/proto deps).
required-features = ["distributed"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# ---- Lint policy (see check.sh, which promotes these to errors with -D warnings) ----
#
# Strictness: clippy::pedantic enforced crate-wide, plus the restriction lints
# below. The unwrap/expect/panic restriction lints are NOT here — they are
# scoped to the library in src/lib.rs, because binaries and tests may legitimately
# unwrap/panic. The allows below are by-design exceptions, each justified inline.

[lints.rust]
# Future-proofing: if an `unsafe fn` is ever added, its unsafe operations must be
# wrapped in an explicit `unsafe {}` block rather than riding the fn signature.
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
# Group lint: priority -1 so the individual `allow`s below override it.
pedantic = { level = "warn", priority = -1 }

# Restriction lint we want everywhere: every `unsafe` block must carry a
# `// SAFETY:` justification immediately above it.
undocumented_unsafe_blocks = "warn"

# --- Justified allows (by-design for this codebase, not defects) ---

# The match hot path is deliberately integer-only: `as` casts on segment-local
# u32 IDs, feature ids, masks, and counts, all bounded by construction. Switching
# to fallible `try_into` would add branches and error paths the design explicitly
# forbids (CLAUDE.md: "no allocation/branchy work on the match hot path").
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# mmap section readers reinterpret `*const u8` as more-aligned element pointers;
# alignment is guaranteed by the writer's 8-byte section padding and proven in the
# SAFETY docs in src/storage.rs.
cast_ptr_alignment = "allow"

# `#[must_use]` on every getter/accessor is noise for an internal library (~150 sites)
# and does not catch real bugs here.
must_use_candidate = "allow"

# Errors are typed (ParseError / NormalizerError / WriteError / io::Error) and the
# surface is internal; per-fn `# Errors` / `# Panics` doc sections add churn
# without improving safety.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# `write!`-to-String would force either `.unwrap()` or `let _ =` on an infallible
# write, colliding with the library's no-unwrap / no-silent-discard rules.
format_push_string = "allow"

# A few Debug impls intentionally omit raw-pointer / bulky internal fields that are
# not meaningful to print (e.g. MmapSegment's mmap base pointers).
missing_fields_in_debug = "allow"

# Refactoring long functions is out of scope for the hardening pass and risks
# behavior changes in the match/compaction paths.
too_many_lines = "allow"

# Internal design/docs reference many product and identifier names; backtick
# pedantry on doc comments adds churn without changing the public API.
doc_markdown = "allow"

# The matcher deliberately uses parallel names for paired concepts (e.g.
# `req_mask`/`forb_mask`, `main_sigs`/`broad_sigs`, `lo`/`hi`). These are clearer
# than artificially divergent names, so the "names too similar" heuristic is noise.
similar_names = "allow"

# Builder methods (e.g. NormalizerBuilder) return `Self` by design; `#[must_use]`
# on each is the same noise we already reject via `must_use_candidate` above.
return_self_not_must_use = "allow"
